<?xml version="1.0"?>
<package format="2">
  <name>tesseract_planning_nodes</name>
  <version>0.1.0</version>
  <description>The tesseract_planning_nodes package</description>
  <maintainer email="joseph.schornak@swri.org">Joseph Schornak</maintainer>
  <license>Apache 2.0</license>
  <author>Joseph Schornak</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <exec_depend>rclcpp</exec_depend>
  <depend>eigen</depend>
  <depend>tesseract</depend>
  <depend>tesseract_rosutils</depend>
  <depend>tesseract_msgs</depend>
  <depend>tesseract_motion_planners</depend>
  <depend>pluginlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
